feature: email sending functionality added * implemented a generic email sending function with HTML and text support * added email templates for welcome messages * created tests for email sending functionality * updated default configuration with site URL and project name

--- a/src/default_config.toml
+++ b/src/default_config.toml
@@ -5,6 +5,8 @@ allowed_hosts = ["*"]
 script_name = ''
 csrf_trusted_origins = []
 environment = "local"
+site_url = "http://exmaple.com"
+project_name = "Example Proj"
 
 [celery]
 broker_url = "redis://localhost:6379/2"
